fixed chrome chatbox display by hiding the scrollbar

--- a/client/src/public/stylesheets/base/bot/_chatContainer.scss
+++ b/client/src/public/stylesheets/base/bot/_chatContainer.scss
@@ -21,6 +21,10 @@
   overflow-x: hidden;
 }
 
+.chat-container-E::-webkit-scrollbar { 
+    display: none; 
+};
+
 .chatbox-F {
   display: -webkit-box;
   display: -ms-flexbox;
